--- a/markus-diapos.tex
+++ b/markus-diapos.tex
@@ -62,6 +62,8 @@
 {Benjamin \textsc{Vialle}, Ghislain Guiot}
 \institute[ECN]{\structure{École Centrale de Nantes}}
 
+\titlegraphic{\includegraphics[width=123.9px,height=41.4px]{images/markus_logo_big.png}}
+
 \date[10/07/2013]{RMLL - 10/07/2013}
 
 %\date[] % (optional)
