--- a/markus-slides.tex
+++ b/markus-slides.tex
@@ -62,6 +62,8 @@
 {Benjamin \textsc{Vialle}, Ghislain Guiot}
 \institute[ECN]{\structure{École Centrale de Nantes}}
 
+\titlegraphic{\includegraphics[width=123.9px,height=41.4px]{images/markus_logo_big.png}}
+
 \date[2013-07-10]{LSM - 2013/07/10}
 
 %\date[] % (optional)
