--- a/markus-diapos.tex
+++ b/markus-diapos.tex
@@ -208,7 +208,7 @@
                 \begin{figure}
                         \begin{center}
                                 \scalebox{0.61}{
-                                        \includegraphics[width=\textwidth]{images/markus-annotations.png}
+                                        \includegraphics[width=\textwidth]{images/grader_view_fr.png}
                                 }
                                 %
                                 \caption{Vue du correcteur}
@@ -230,8 +230,8 @@
                 \vspace{-1em}
                 \begin{figure}
                         \begin{center}
-                                \scalebox{0.29}{
-                                        \includegraphics[width=\textwidth]{images/markus-criteres.png}
+                                \scalebox{0.20}{
+                                        \includegraphics[width=\textwidth]{images/marks_fr.png}
                                 }
                                 %
                                 \caption{Détermination de critères}
@@ -269,8 +269,8 @@
                 \vspace{-1em}
                 \begin{figure}
                         \begin{center}
-                                \scalebox{0.55}{
-                                        \includegraphics[width=\textwidth]{images/markus-commentaires.png}
+                                \scalebox{0.50}{
+                                        \includegraphics[width=\textwidth]{images/results_fr.png}
                                 }
                                 \caption{Vue des résultats par les étudiants}
                         \end{center}
