--- a/markus-slides.tex
+++ b/markus-slides.tex
@@ -206,8 +206,8 @@
                 \vspace{-1em}
                 \begin{figure}
                         \begin{center}
-                                \scalebox{0.61}{
-                                        \includegraphics[width=\textwidth]{images/markus-annotations.png}
+                                \scalebox{0.55}{
+                                        \includegraphics[width=\textwidth]{images/grader_view_en.png}
                                 }
                                 %
                                 \caption{Grader view}
@@ -229,8 +229,8 @@
                 \vspace{-1em}
                 \begin{figure}
                         \begin{center}
-                                \scalebox{0.29}{
-                                        \includegraphics[width=\textwidth]{images/markus-criteres.png}
+                                \scalebox{0.20}{
+                                        \includegraphics[width=\textwidth]{images/marks_en.png}
                                 }
                                 %
                                 \caption{Set of criteria}
@@ -269,7 +269,7 @@
                 \begin{figure}
                         \begin{center}
                                 \scalebox{0.55}{
-                                        \includegraphics[width=\textwidth]{images/markus-commentaires.png}
+                                        \includegraphics[width=\textwidth]{images/results_en.png}
                                 }
                                 \caption{Result view for students}
                         \end{center}
