--- a/markus-slides.tex
+++ b/markus-slides.tex
@@ -410,11 +410,11 @@
 \section{Conclusion}
 
 
-\subsection*{Bilan}
+\subsection*{Results}
 
 \frame
 {
-        \frametitle{Synthèse}
+        \frametitle{Overview}
 
         \begin{alertblock}{MarkUs, an online marking tool to annotate student's code}
                 How to improve evaluation process in practical work or student's projects?
